# music-recommendation

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: recommender_v2.dev.toml  recommender_v2.toml
models/: track2vec.model  track2vec.wordvectors
notebooks/: 01_data_exploration.ipynb  02_track_embeddings.ipynb  03_spotify_features.ipynb  04_controllable_recommender.ipynb
src/: __init__.py  export_data.py
src/recommender_v2/: __init__.py  cli.py  collect.py  config.py  dataset.py  evaluate.py  export_web.py  metrics.py  model_lab.py  paths.py  reporting.py  reranker.py  retrieval.py  splits.py  utils.py
tests/: test_model_lab.py  test_recommender_v2.py
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
web/components/: ControlPanel.tsx  ModelLabPanel.tsx  SearchBar.tsx  TrackIdentity.tsx  TrackList.tsx  Visualization3D.tsx
web/lib/: embeddings.ts  modelLab.ts  recommender.ts  reranker.ts  trackDisplay.ts  utils.ts
web/pages/: _app.tsx  index.tsx
web/pages/api/: genres.ts  recommend.ts  search.ts
web/pages/api/neighbors/: [id].ts
web/public/data/: embeddings_meta.json  genres.json  model_lab.json  search_index.json  tsne_coords.json
web/styles/: globals.css
