[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recommendation"
version = "0.1.0"
description = "Music recommendation experiments and a Next.js app for exploring results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "kaggle>=1.6.0",
    "kagglehub>=0.2.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "spotipy>=2.23.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
recommender-v2 = "src.recommender_v2.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
